--- a/index.html
+++ b/index.html
@@ -483,19 +483,6 @@
     </div>
   </nav>
 
-	<!-- Banner 728x90px -->
-<center>
-<script>
-  atOptions = {
-    'key' : '9af3aba0f980f36b5962eecc680ef886',
-    'format' : 'iframe',
-    'height' : 90,
-    'width' : 728,
-    'params' : {}
-  };
-</script>
-<script src="https://www.highperformanceformat.com/9af3aba0f980f36b5962eecc680ef886/invoke.js"></script>
-</center>
 
 
 
@@ -600,9 +587,19 @@
       </section>
 
 
-<!-- Native Banner Ads (4:1) -->
-		<script async="async" data-cfasync="false" src="https://pl28690053.effectivegatecpm.com/8cc67793add873587011fd1ac31da600/invoke.js"></script>
-        <div id="container-8cc67793add873587011fd1ac31da600"></div>
+<!-- Banner Ads (468x60) -->
+	<center>
+	  <script>
+  atOptions = {
+    'key' : '25bba3210c3675ec58b03bfa976686b3',
+    'format' : 'iframe',
+    'height' : 60,
+    'width' : 468,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/25bba3210c3675ec58b03bfa976686b3/invoke.js"></script>
+</center>
 
 		
 		
@@ -623,9 +620,19 @@
     </b:if>
 
 
-<!-- Native Banner Ads (4:1) -->
-		<script async="async" data-cfasync="false" src="https://pl28690053.effectivegatecpm.com/8cc67793add873587011fd1ac31da600/invoke.js"></script>
-        <div id="container-8cc67793add873587011fd1ac31da600"></div>
+<!-- Banner Ads (468x60) -->
+	<center>
+	  <script>
+  atOptions = {
+    'key' : '25bba3210c3675ec58b03bfa976686b3',
+    'format' : 'iframe',
+    'height' : 60,
+    'width' : 468,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/25bba3210c3675ec58b03bfa976686b3/invoke.js"></script>
+</center>
 
 	  
     <!-- Blog Posts Section -->
@@ -666,9 +673,19 @@
     </section>
 
 
-<!-- Native Banner Ads (4:1) -->
-		<script async="async" data-cfasync="false" src="https://pl28690053.effectivegatecpm.com/8cc67793add873587011fd1ac31da600/invoke.js"></script>
-        <div id="container-8cc67793add873587011fd1ac31da600"></div>
+<!-- Banner Ads (468x60) -->
+	<center>
+	  <script>
+  atOptions = {
+    'key' : '25bba3210c3675ec58b03bfa976686b3',
+    'format' : 'iframe',
+    'height' : 60,
+    'width' : 468,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/25bba3210c3675ec58b03bfa976686b3/invoke.js"></script>
+</center>	
 
 	  
     <!-- Purpose Explanation Section (Only on Homepage) -->
@@ -713,9 +730,20 @@
   </div>
 
 	
-<!-- Native Banner Ads (4:1) -->
-		<script async="async" data-cfasync="false" src="https://pl28690053.effectivegatecpm.com/8cc67793add873587011fd1ac31da600/invoke.js"></script>
-        <div id="container-8cc67793add873587011fd1ac31da600"></div>
+	<!-- Banner 728x90px -->
+<center>
+<script>
+  atOptions = {
+    'key' : '9af3aba0f980f36b5962eecc680ef886',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/9af3aba0f980f36b5962eecc680ef886/invoke.js"></script>
+</center>
+
 
   <!-- Footer -->
   <footer>
