--- a/privacy.html
+++ b/privacy.html
@@ -72,6 +72,10 @@
     }
   </style>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+
+  <!-- Popunder Normal -->
+<script src="https://pl28692212.effectivegatecpm.com/ef/77/0e/ef770ef560a7c1a844a591e1e054eb2f.js"></script>
+  
 </head>
 <!-- Navbar -->
   <nav class='navbar navbar-expand-lg navbar-dark fixed-top'>
