--- a/index.html
+++ b/index.html
@@ -475,9 +475,31 @@
       <div class='collapse navbar-collapse' id='navbarNav'>
         <ul class='navbar-nav ms-auto'>
           <li class='nav-item'><a class='nav-link active' href=#>Home</a></li>
-          <li class='nav-item'><a class='nav-link' href='https://digital-afterlife-wd.blogspot.com/search/label/Learn%20in%20English?&max-results=5'>Education</a></li>
-          <li class='nav-item'><a class='nav-link' href='https://digital-afterlife-wd.blogspot.com/search/label/Learn%20in%20Sinhala?&max-results=5'>Income</a></li>
-          <li class='nav-item'><a class='nav-link' href='https://midnight-fiction-wd.blogspot.com/search/label/Series?&max-results=5'>Stories</a></li>
+
+<li class='nav-item'>
+  <a class='nav-link'
+     href='https://www.effectivegatecpm.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2'
+     onclick="window.open('https://digital-afterlife-wd.blogspot.com/search/label/Learn%20in%20English?&max-results=5','_blank')">
+     Education
+  </a>
+</li>
+
+<li class='nav-item'>
+  <a class='nav-link'
+     href='https://www.effectivegatecpm.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2'
+     onclick="window.open('https://digital-afterlife-wd.blogspot.com/search/label/Learn%20in%20Sinhala?&max-results=5','_blank')">
+     Income
+  </a>
+</li>
+
+<li class='nav-item'>
+  <a class='nav-link'
+     href='https://www.effectivegatecpm.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2'
+     onclick="window.open('https://midnight-fiction-wd.blogspot.com/search/label/Series?&max-results=5','_blank')">
+     Stories
+  </a>
+</li>
+			
         </ul>
       </div>
     </div>
@@ -496,21 +518,24 @@
         </h2>
         <div class='row g-4'>
           <div class='col-md-4'>
-            <a href='https://digital-afterlife-wd.blogspot.com/search/label/Learn%20in%20English?&max-results=5' class='category-card education text-decoration-none d-block h-100' target='_blank'>
+            <a href='https://www.effectivegatecpm.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2' class='category-card education text-decoration-none d-block h-100'
+			onclick="window.open('https://digital-afterlife-wd.blogspot.com/search/label/Learn%20in%20English?&max-results=5','_blank')">
               <div class='category-icon'><i class='fas fa-graduation-cap'></i></div>
               <h3 class='h4 mb-2'>Education Hub</h3>
               <p>Learning resources & tutorials to grow your skills</p>
             </a>
           </div>
           <div class='col-md-4'>
-            <a href='https://www.youtube.com/watch?v=Fn9skiJXeFs&list=PLGUnvI_n_fU3Ze0Rt7p9Bg1HLZ3QEKH9S' class='category-card income text-decoration-none d-block h-100' target='_blank'>
+            <a href='https://www.effectivegatecpm.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2' class='category-card income text-decoration-none d-block h-100' 
+			onclick="window.open('https://www.youtube.com/watch?v=Fn9skiJXeFs&list=PLGUnvI_n_fU3Ze0Rt7p9Bg1HLZ3QEKH9S','_blank')">
               <div class='category-icon'><i class='fas fa-wallet'></i></div>
               <h3 class='h4 mb-2'>Income Streams</h3>
               <p>Proven methods to build passive income online</p>
             </a>
           </div>
           <div class='col-md-4'>
-            <a href='https://midnight-fiction-wd.blogspot.com/' class='category-card stories text-decoration-none d-block h-100' target='_blank'>
+            <a href='https://www.effectivegatecpm.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2' class='category-card stories text-decoration-none d-block h-100' 
+			onclick="window.open('https://midnight-fiction-wd.blogspot.com/','_blank')">
               <div class='category-icon'><i class='fas fa-magic'></i></div>
               <h3 class='h4 mb-2'>Story Garden</h3>
               <p>Magical tales and adventures for all ages</p>
