--- a/privacy.html
+++ b/privacy.html
@@ -74,7 +74,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
   <!-- Popunder Normal -->
-<script src="https://pl28692212.effectivegatecpm.com/ef/77/0e/ef770ef560a7c1a844a591e1e054eb2f.js"></script>
+<script src="https://balancedsuppercreed.com/ef/77/0e/ef770ef560a7c1a844a591e1e054eb2f.js"></script>
   
 </head>
 <!-- Navbar -->
