--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
 <li class='nav-item'>
   <a class='nav-link'
-     href='https://www.effectivegatecpm.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2'
+     href='https://balancedsuppercreed.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2'
      onclick="window.open('https://digital-afterlife-wd.blogspot.com/search/label/Learn%20in%20English?&max-results=5','_blank')">
      Education
   </a>
@@ -486,7 +486,7 @@
 
 <li class='nav-item'>
   <a class='nav-link'
-     href='https://www.effectivegatecpm.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2'
+     href='https://balancedsuppercreed.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2'
      onclick="window.open('https://digital-afterlife-wd.blogspot.com/search/label/Learn%20in%20Sinhala?&max-results=5','_blank')">
      Income
   </a>
@@ -494,7 +494,7 @@
 
 <li class='nav-item'>
   <a class='nav-link'
-     href='https://www.effectivegatecpm.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2'
+     href='https://balancedsuppercreed.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2'
      onclick="window.open('https://midnight-fiction-wd.blogspot.com/search/label/Series?&max-results=5','_blank')">
      Stories
   </a>
@@ -518,7 +518,7 @@
         </h2>
         <div class='row g-4'>
           <div class='col-md-4'>
-            <a href='https://www.effectivegatecpm.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2' class='category-card education text-decoration-none d-block h-100'
+            <a href='https://balancedsuppercreed.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2' class='category-card education text-decoration-none d-block h-100'
 			onclick="window.open('https://digital-afterlife-wd.blogspot.com/search/label/Learn%20in%20English?&max-results=5','_blank')">
               <div class='category-icon'><i class='fas fa-graduation-cap'></i></div>
               <h3 class='h4 mb-2'>Education Hub</h3>
@@ -526,7 +526,7 @@
             </a>
           </div>
           <div class='col-md-4'>
-            <a href='https://www.effectivegatecpm.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2' class='category-card income text-decoration-none d-block h-100' 
+            <a href='https://balancedsuppercreed.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2' class='category-card income text-decoration-none d-block h-100' 
 			onclick="window.open('https://www.youtube.com/watch?v=Fn9skiJXeFs&list=PLGUnvI_n_fU3Ze0Rt7p9Bg1HLZ3QEKH9S','_blank')">
               <div class='category-icon'><i class='fas fa-wallet'></i></div>
               <h3 class='h4 mb-2'>Income Streams</h3>
@@ -534,7 +534,7 @@
             </a>
           </div>
           <div class='col-md-4'>
-            <a href='https://www.effectivegatecpm.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2' class='category-card stories text-decoration-none d-block h-100' 
+            <a href='https://balancedsuppercreed.com/qcnbrr2a3?key=7c533623cd4d29af42e28bab1fbfbed2' class='category-card stories text-decoration-none d-block h-100' 
 			onclick="window.open('https://midnight-fiction-wd.blogspot.com/','_blank')">
               <div class='category-icon'><i class='fas fa-magic'></i></div>
               <h3 class='h4 mb-2'>Story Garden</h3>
@@ -546,10 +546,9 @@
 
 
 <!-- Native Banner Ads (4:1) -->
-		<script async="async" data-cfasync="false" src="https://pl28690053.effectivegatecpm.com/8cc67793add873587011fd1ac31da600/invoke.js"></script>
+		<script async="async" data-cfasync="false" src="https://balancedsuppercreed.com/8cc67793add873587011fd1ac31da600/invoke.js"></script>
         <div id="container-8cc67793add873587011fd1ac31da600"></div>
-
-		
+	
 		
       <!-- Tools Section (NOW SECOND) -->
       <section class='tools-section mb-5'>
@@ -623,7 +622,7 @@
     'params' : {}
   };
 </script>
-<script src="https://www.highperformanceformat.com/25bba3210c3675ec58b03bfa976686b3/invoke.js"></script>
+<script src="https://balancedsuppercreed.com/25bba3210c3675ec58b03bfa976686b3/invoke.js"></script>
 </center>
 
 	</br>
@@ -726,7 +725,6 @@
 
 	
 	<!-- Banner 728x90px -->
-<center>
 <script>
   atOptions = {
     'key' : '9af3aba0f980f36b5962eecc680ef886',
@@ -736,8 +734,8 @@
     'params' : {}
   };
 </script>
-<script src="https://www.highperformanceformat.com/9af3aba0f980f36b5962eecc680ef886/invoke.js"></script>
-</center>
+<script src="https://balancedsuppercreed.com/9af3aba0f980f36b5962eecc680ef886/invoke.js"></script>
+
 
 
   <!-- Footer -->
