--- a/index.html
+++ b/index.html
@@ -734,8 +734,9 @@
     'params' : {}
   };
 </script>
+<center>
 <script src="https://balancedsuppercreed.com/9af3aba0f980f36b5962eecc680ef886/invoke.js"></script>
-
+</center>
 
 
   <!-- Footer -->
