--- a/index.html
+++ b/index.html
@@ -459,6 +459,20 @@
       position: absolute;
       margin-left: 5px;
     }
+
+	  /* RESPONSIVE ADS FIX */
+.ad-responsive {
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+  text-align: center;
+}
+
+.ad-responsive iframe {
+  max-width: 100% !important;
+  height: auto !important;
+}
+	  
   </style>
 </head>
 <body>
@@ -613,7 +627,8 @@
 
 <!-- Banner Ads (468x60) -->
 	<center>
-	  <script>
+	<div class="ad-responsive">
+	<script>
   atOptions = {
     'key' : '25bba3210c3675ec58b03bfa976686b3',
     'format' : 'iframe',
@@ -623,9 +638,8 @@
   };
 </script>
 <script src="https://balancedsuppercreed.com/25bba3210c3675ec58b03bfa976686b3/invoke.js"></script>
+</div>
 </center>
-
-	</br>
 		
       <!-- Cartoon Dashboard (NOW THIRD) -->
       <section class='mb-5'>
@@ -726,6 +740,7 @@
 	
 	<!-- Banner 728x90px -->
 	<center>
+	<div class="ad-responsive">
 	<script>
   atOptions = {
     'key' : '9af3aba0f980f36b5962eecc680ef886',
@@ -736,6 +751,7 @@
   };
 </script>
 <script src="https://balancedsuppercreed.com/9af3aba0f980f36b5962eecc680ef886/invoke.js"></script>
+</div>
 </center>
 
 
